apollo-router/src/uplink/snapshots/uhg_custom_appollo_roouter__uplink__test__stream_from_uplink_error_no_retry.snap
---
source: apollo-router/src/uplink/mod.rs
assertion_line: 717
expression: "results.into_iter().map(to_friendly).collect::<Vec<_>>()"
---
- Err: "uplink error, the request will not be retried: code=NO_RETRY message=error message"
