apollo-router/src/uplink/snapshots/uhg_custom_appollo_roouter__uplink__test__stream_from_uplink_error_retry.snap
---
source: apollo-router/src/uplink/mod.rs
assertion_line: 700
expression: "results.into_iter().map(to_friendly).collect::<Vec<_>>()"
---
- Err: "uplink error: code=RETRY_LATER message=error message"
- Ok: "result QueryResult { name: \"ok\", ordering: 1 }"
