apollo-router/src/uplink/snapshots/uhg_custom_appollo_roouter__uplink__test__stream_from_uplink_failed_from_all.snap
---
source: apollo-router/src/uplink/mod.rs
assertion_line: 901
expression: "results.into_iter().map(to_friendly).collect::<Vec<_>>()"
---
- Err: fetch failed from all 2 uplink endpoints
