apollo-router/src/uplink/snapshots/uhg_custom_appollo_roouter__uplink__test__stream_from_uplink_failed_from_single.snap
---
source: apollo-router/src/uplink/mod.rs
assertion_line: 919
expression: "results.into_iter().map(to_friendly).collect::<Vec<_>>()"
---
- Err: "fetch failed from uplink endpoint, and there are no fallback endpoints configured"
