apollo-router/src/uplink/snapshots/uhg_custom_appollo_roouter__uplink__test__stream_from_uplink_fallback.snap
---
source: apollo-router/src/uplink/mod.rs
assertion_line: 656
expression: "results.into_iter().map(to_friendly).collect::<Vec<_>>()"
---
- Ok: "result QueryResult { name: \"ok\", ordering: 1 }"
- Ok: "result QueryResult { name: \"ok\", ordering: 2 }"
