apollo-router/src/uplink/snapshots/uhg_custom_appollo_roouter__uplink__test__stream_from_uplink_invalid.snap
---
source: apollo-router/src/uplink/mod.rs
assertion_line: 857
expression: "results.into_iter().map(to_friendly).collect::<Vec<_>>()"
---
- Err: fetch failed from all 3 uplink endpoints
