apollo-router/src/uplink/snapshots/uhg_custom_appollo_roouter__uplink__test__stream_from_uplink_transforming_new_response_first_response_transform_fails.snap
---
source: apollo-router/src/uplink/mod.rs
assertion_line: 962
expression: "results.into_iter().map(to_friendly).collect::<Vec<_>>()"
---
- Ok: "result TransformedQueryResult { name: \"ok\", halved_ordering: 50 }"
